# Steam-Time-Series

./: README.md  pyproject.toml
.github/workflows/: ingestion_pipeline.yaml  run_ingestion_pipeline.yaml
app/: app_requirements.txt  streamlit_app.py
data/: bandwidths.csv  support_requests.csv
notebooks/: eda.ipynb  endpoint_test.ipynb  get_old_data.ipynb  get_old_data_v2.ipynb  get_old_data_v3.ipynb  scrape_data.ipynb  viz_testing.ipynb
src/: ingest_data.py  utils.py
src/ingestion/: ingestion_pipeline.py  run_ingestion.py
