[project]
name = "steam-time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "pip>=25.2",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "waybackpy>=3.0.6",
]
